# teensy3-rs-demo

./: Cargo.toml  Makefile
.cargo/: config
src/: main.rs
teensy3/src/: util.rs
