[package]
name = "teensy3-rs-demo"
version = "0.1.0"
authors = ["Simon Sapin <simon.sapin@exyr.org>", "James Munns <james.munns@gmail.com>"]

[dependencies]
#teensy3 = "0.1"
teensy3 = { git = "https://github.com/TheZoq2/teensy3-rs" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
